[gd_scene load_steps=11 format=3 uid="uid://fgxha8wl55pa"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_b1dbg"]
[ext_resource type="Script" path="res://Scenes/Player/parry.gd" id="2_avuuq"]
[ext_resource type="Texture2D" uid="uid://btcmiq31qee7d" path="res://Scenes/Player/CharacterBody.png" id="2_pi5cj"]
[ext_resource type="Texture2D" uid="uid://dy0q7mppvj7j1" path="res://Scenes/Player/CharacterOutline.png" id="3_b0wk1"]
[ext_resource type="Script" path="res://Scenes/Player/AnimationPlayer.gd" id="5_b3kqx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ohtq"]
size = Vector2(250, 250)

[sub_resource type="Animation" id="Animation_r421c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843)]
}

[sub_resource type="Animation" id="Animation_vhsup"]
resource_name = "parry"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2b586"]
_data = {
"RESET": SubResource("Animation_r421c"),
"parry": SubResource("Animation_vhsup")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fylq6"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_b1dbg")

[node name="ParryArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
monitoring = false
script = ExtResource("2_avuuq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryArea"]
shape = SubResource("RectangleShape2D_7ohtq")

[node name="ParryTimer" type="Timer" parent="ParryArea"]
wait_time = 0.1
one_shot = true

[node name="LockoutTimer" type="Timer" parent="ParryArea"]
wait_time = 0.5
one_shot = true

[node name="Damage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2(0.125, 0.125)

[node name="Body" type="Sprite2D" parent="Sprites"]
modulate = Color(0, 1, 1, 1)
texture = ExtResource("2_pi5cj")

[node name="Outline" type="Sprite2D" parent="Sprites"]
modulate = Color(0, 0.454902, 1, 1)
texture = ExtResource("3_b0wk1")

[node name="Flash" type="Sprite2D" parent="Sprites"]
visible = false
modulate = Color(1, 1, 1, 0.607843)
texture = ExtResource("2_pi5cj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2b586")
}
script = ExtResource("5_b3kqx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_fylq6")

[node name="UsePowerupCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="ParryArea" to="ParryArea" method="_on_area_entered"]
[connection signal="parried" from="ParryArea" to="AnimationPlayer" method="_on_parry_area_parried"]
[connection signal="timeout" from="ParryArea/ParryTimer" to="ParryArea" method="_on_parry_timer_timeout"]
[connection signal="timeout" from="ParryArea/LockoutTimer" to="ParryArea" method="_on_lockout_timer_timeout"]
[connection signal="timeout" from="UsePowerupCooldown" to="." method="_on_use_powerup_cooldown_timeout"]
